fix:cf d1 binding

--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -8,13 +8,14 @@ workers_dev = true
 directory = "./assets"
 binding = "ASSETS"
 
+[[d1_databases]]
+binding = "DB"
+database_name = "moe-counter"
+migrations_dir = "migrations"
+
 # Put runtime vars in `.env` / `.dev.vars` or Cloudflare dashboard:
 # DB_DRIVER, LOG_LEVEL, APP_SITE, GA_ID, COUNTER_PREFIX,
 # UPSTASH_REDIS_REST_URL, UPSTASH_REDIS_REST_TOKEN
-#
-# If you want to run D1 mode with local wrangler, add and fill:
-# [[d1_databases]]
-# binding = "DB"
-# database_name = "moe-counter"
-# database_id = "REPLACE_WITH_D1_DATABASE_ID"
-# migrations_dir = "migrations"
+# D1 is bound by name (no `database_id` in repo) so open-source templates
+# don't expose account-specific IDs. For older Wrangler/Dashboard flows,
+# manual binding by `database_id` may still be required.
